# react-native-nitro-onnxruntime

./: CONTRIBUTING.md  LICENSE  NitroOnnxruntime.podspec  README.md  nitro.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/nitroonnxruntime/: AssetManager.kt  NitroOnnxruntime.kt
android/src/main/java/com/nitroonnxruntime/: NitroOnnxruntimePackage.kt
cpp/: InferenceSession.cpp  InferenceSession.hpp  Onnxruntime.cpp  Onnxruntime.hpp
example/: app.json  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/nitroonnxruntime/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/NitroOnnxruntimeExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroOnnxruntimeExample.xcodeproj/: project.pbxproj
example/ios/NitroOnnxruntimeExample.xcodeproj/xcshareddata/xcschemes/: NitroOnnxruntimeExample.xcscheme
example/ios/NitroOnnxruntimeExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  SpeedTest.tsx
example/src/models/: tfmobilenetv2.tflite
ios/: AssetManager.swift  NitroOnnxruntime.swift
src/: NitroOnnxruntime.nitro.ts  Onnxruntime.nitro.ts  index.tsx
